--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "start": "webpack --watch --colors && server",
+    "server": "light-server -s . -p 8000"
   },
   "private": true,
   "dependencies": {
-    "typescript": "^3.4.5"
+    "light-server": "^2.6.2",
+    "ts-loader": "^6.0.1",
+    "typescript": "^3.4.5",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   }
 }
