--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",        // path to output directory
-    "sourceMap": false,          // allow sourcemap support
-    "strictNullChecks": true,   // enable strict null checks as a best practice
-    "module": "es2015",            // specify module code generation
-    "target": "es5",            // specify ECMAScript target version
-    "allowJs": true             // allow a partial TypeScript and JavaScript codebase
-
+    "noEmitOnError": true,
+    "target": "es5",
+    "lib": [
+      "DOM",
+      "ESNext",
+      "DOM.Iterable",
+      "ScriptHost",
+      "es2015.promise"
+    ],
+    "outDir": "dist"
   },
   "include": [
-    "./src/"
+    "src/**/*"
   ]
 }
