--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --watch --colors && server",
-    "server": "light-server -s . -p 8000"
+    "build": "webpack --colors",
+    "watch": "webpack --colors --watch",
+    "server": "webpack-dev-server --mode development --port 8000"
   },
   "private": true,
   "dependencies": {
-    "light-server": "^2.6.2",
+    "css-loader": "^2.1.1",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "ts-loader": "^6.0.1",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^0.7.0"
   }
 }
