--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "config": "^3.1.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
     "light-server": "^2.6.2",
