--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "private": true,
   "dependencies": {
-    "config": "^3.1.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
     "light-server": "^2.6.2",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.1",
@@ -25,7 +23,8 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "terser-webpack-plugin": "^1.3.0",
     "webpack-livereload-plugin": "^2.2.0"
   }
 }
