--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
   },
   "private": true,
   "dependencies": {
+    "autoprefixer": "^9.5.1",
+    "classlist-polyfill": "^1.2.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
+    "es6-promise-promise": "^1.0.0",
     "light-server": "^2.6.2",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.1",
+    "tslint": "^5.17.0",
     "typescript": "^3.4.5",
+    "typescript-tslint-plugin": "^0.4.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack-dev-server": "^3.4.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "codelyzer": "^5.1.0",
     "cross-env": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^1.3.0",
