--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,15 @@
   "compilerOptions": {
     "noEmitOnError": true,
     "target": "es5",
+    "plugins": [
+      {
+        "name": "typescript-tslint-plugin",
+        "alwaysShowRuleFailuresAsWarnings": false,
+        "ignoreDefinitionFiles": true,
+        "configFile": "./tslint.json",
+        "suppressWhileTypeErrorsPresent": false
+      }
+    ],
     "lib": [
       "DOM",
       "ESNext",
