--- a/environment/.env.prod
+++ b/environment/.env.prod
@@ -1,3 +1,3 @@
 PROD = true
-API_URL = 'https://viacustomer.com/api'
+API_URL = 'https://api.viacustomer.com/api'
 S3_URL = 'https://d2vychudvmsuzv.cloudfront.net'
