--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^2.1.1",
     "dayjs": "^1.8.14",
     "dotenv": "^8.0.0",
+    "es6-promise": "^4.2.6",
     "es6-promise-promise": "^1.0.0",
     "light-server": "^2.6.2",
     "node-sass": "^4.12.0",
