--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-env": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^1.3.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack-livereload-plugin": "^2.2.0"
   }
 }
